--- a/public/index.html
+++ b/public/index.html
@@ -28,4 +28,5 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
+  <noscript>Your browser does not support JavaScript!</noscript>
 </html>
