--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="yandex-verification" content="6a6016fa3dccc5e2" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/MedikImage/MED5.jpg" sizes="150x150" type="image/png">
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script>
