--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="yandex-verification" content="6a6016fa3dccc5e2" />
+    <meta name="google-site-verification" content="d-nDbaIw8cjCcGn_-4ZugfEjusHlTtpKuio00LiSr-E" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/MedikImage/MED5.jpg" sizes="150x150" type="image/png">
     <script src="https://ckeditor.com/apps/ckfinder/3.5.0/ckfinder.js"></script>
     <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
